--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project>
-  <groupId>org.strata.workshop</groupId>
+  <groupId>com.cloudera.workshop</groupId>
   <artifactId>spark-strata</artifactId>
   <modelVersion>4.0.0</modelVersion>
   <name>strata-2017-sanjose</name>
