--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 
       </exclusions>
     </dependency>
+      <dependency>
+          <groupId>com.databricks</groupId>
+          <artifactId>spark-xml_2.10</artifactId>
+          <version>0.4.1</version>
+          <scope>compile</scope>
+      </dependency>
 
     <dependency>
       <groupId>com.github.scopt</groupId>
